--- a/app/src/main/res/layout/dialog_add_item.xml
+++ b/app/src/main/res/layout/dialog_add_item.xml
@@ -25,7 +25,15 @@ android:layout_height="wrap_content">
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
         android:hint="Enter item Name Here" />
-    <EditText
+    <Spinner
+        android:id="@+id/itemQty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="4dp"/>
+<!--    <EditText
         android:id="@+id/itemQty"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,5 +42,5 @@ android:layout_height="wrap_content">
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
-        android:hint="Enter item quantity Here" />
+        android:hint="Enter item quantity Here" />-->
 </LinearLayout>
