--- a/app/src/main/res/layout/dialog_add_item.xml
+++ b/app/src/main/res/layout/dialog_add_item.xml
@@ -14,7 +14,7 @@ android:layout_height="wrap_content">
         android:gravity="center"
         android:textStyle="bold"
         android:textSize="24dp" />
-    <EditText
+    <TextView
         android:id="@+id/itemName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,17 +23,16 @@ android:layout_height="wrap_content">
         android:layout_marginTop="8dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:layout_marginBottom="4dp"
-        android:hint="Enter item Name Here" />
-    <Spinner
+        android:layout_marginBottom="4dp"/>
+<!--    <Spinner
         android:id="@+id/itemQty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:layout_marginBottom="4dp"/>
-<!--    <EditText
+        android:layout_marginBottom="4dp"/>-->
+    <EditText
         android:id="@+id/itemQty"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -42,5 +41,5 @@ android:layout_height="wrap_content">
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
-        android:hint="Enter item quantity Here" />-->
+        android:hint="Enter item quantity Here" />
 </LinearLayout>
