--- a/app/src/main/res/layout/dialog_add_item.xml
+++ b/app/src/main/res/layout/dialog_add_item.xml
@@ -23,7 +23,8 @@ android:layout_height="wrap_content">
         android:layout_marginTop="8dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:layout_marginBottom="4dp"/>
+        android:layout_marginBottom="4dp"
+        android:textSize="24dp"/>
 <!--    <Spinner
         android:id="@+id/itemQty"
         android:layout_width="match_parent"
