--- a/app/src/main/res/layout/dialog_add_item.xml
+++ b/app/src/main/res/layout/dialog_add_item.xml
@@ -20,6 +20,7 @@ android:layout_height="wrap_content">
         android:layout_height="wrap_content"
         android:maxLines="1"
         android:maxLength="25"
+        android:gravity="center"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
