--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,10 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/itemListView"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/shopping_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical" />
 <!--    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/shopping_list"
         android:scrollbars="vertical"
