--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,12 @@
         android:id="@+id/nav_home"
         android:name="com.example.geoshoppingfinal.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_nav_home_to_nav_send"
+            app:destination="@id/nav_send"
+            app:enterAnim="@anim/fragment_fade_enter" />
+    </fragment>
 
 <!--    <fragment
         android:id="@+id/nav_gallery"
@@ -39,5 +44,9 @@
         android:id="@+id/nav_send"
         android:name="com.example.geoshoppingfinal.ui.send.SendFragment"
         android:label="@string/menu_send"
-        tools:layout="@layout/fragment_send" />
+        tools:layout="@layout/fragment_send">
+        <argument
+            android:name="shopID"
+            app:argType="integer" />
+    </fragment>
 </navigation>
