Add item activity has a button to add items directly instead of the search to add method. This is more convenient to the user. slightly increased the radius of the geofences to increase the likely hood of it triggering when signal is bad. All lists have a default empty list message. This message will prompt the user to add items to a list. Shopping list that is geofenced will now show green. Was a requested feature. Added a basic history feature where a previously linked list will ask the user if they want to link back to a previously linked shop when adding an item to said list. This makes it much more convenient for the user when using the same list and location.  Updated the geofence broadcast receiver to handle multiple geofences as locations that were triggering at the same time were no displaying their notification. Added a dialog to ask the user if they want to automatically geofence a location after adding. Makes it more convenient for user. Fixed the following bugs; No shop name being displayed for notification when location/geofence was removed before the notification was received. There is now a check in the Broadcast receiver to check if said location exists when creating geofence. Deleting item will now also delete items in shopping lists. Fixed various crashes when deleting items in the add item activity. This was done by deleting items on the list and then refreshing the list in the fragment.

--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -11,4 +11,24 @@
         android:layout_height="fill_parent"
         android:id="@+id/itemView"/>
 
+    <TextView
+        android:id="@+id/emptyElement"
+        style="?android:listSeparatorTextViewStyle"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/empty_list"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:backgroundTint="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@android:drawable/ic_input_add" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
