--- a/app/src/main/res/layout/dialog_add_item.xml
+++ b/app/src/main/res/layout/dialog_add_item.xml
@@ -18,14 +18,22 @@ android:layout_height="wrap_content">
         android:id="@+id/itemName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:maxLength="25"
         android:gravity="center"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
         android:textSize="24dp"/>
+    <EditText
+        android:id="@+id/itemNameEdit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textAutoComplete"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="4dp"
+        android:hint="Enter item name Here" />
 <!--    <Spinner
         android:id="@+id/itemQty"
         android:layout_width="match_parent"
