--- a/app/src/main/res/layout/card_view_shopping_list.xml
+++ b/app/src/main/res/layout/card_view_shopping_list.xml
@@ -11,6 +11,7 @@
         android:layout_height="60dp"
         android:layout_gravity="center"
         android:layout_margin="5dp"
+        card_view:cardBackgroundColor="#FFFFFF"
         card_view:cardCornerRadius="2dp"
         card_view:contentPadding="10dp">
 
