--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,6 +9,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical" />
+    <TextView
+        android:id="@+id/emptyElement"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:paddingBottom="5dp"
+        android:text="@string/empty_list"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 <!--    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/shopping_list"
         android:scrollbars="vertical"
