--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -8,6 +8,14 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/itemListView"/>
+    <TextView
+        android:id="@+id/emptyElement"
+        style="?android:listSeparatorTextViewStyle"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/empty_list"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
 <!--    <TextView
         android:id="@+id/text_send"
