--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -9,6 +9,14 @@
         android:layout_height="fill_parent"
         android:id="@+id/locationListView"/>
 
+    <TextView
+        android:id="@+id/emptyElement"
+        style="?android:listSeparatorTextViewStyle"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/empty_list"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 <!--    <TextView
         android:id="@+id/text_slideshow"
         android:layout_width="match_parent"
