--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -13,10 +13,10 @@
 
     <TextView
         android:id="@+id/emptyElement"
-        style="?android:listSeparatorTextViewStyle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/empty_list"
+        android:paddingStart="10dp"
         android:textSize="20sp"
         android:textStyle="bold" />
 
