--- a/app/src/main/res/layout/add_item_list.xml
+++ b/app/src/main/res/layout/add_item_list.xml
@@ -8,7 +8,7 @@ android:layout_height="match_parent">
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/addItem"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        style="?android:listSeparatorTextViewStyle" />
+        android:textSize="25sp"
+        android:paddingStart="10dp"
+        android:textStyle="bold" />
 </RelativeLayout>
