--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,10 +17,6 @@
         android:paddingBottom="5dp"
         android:text="@string/empty_list"
         android:textSize="20dp"
+        android:paddingStart="10dp"
         android:textStyle="bold" />
-<!--    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/shopping_list"
-        android:scrollbars="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>-->
 </androidx.constraintlayout.widget.ConstraintLayout>
