--- a/app/src/main/res/layout/seperator_item_list.xml
+++ b/app/src/main/res/layout/seperator_item_list.xml
@@ -13,4 +13,6 @@ android:layout_height="match_parent">
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:textStyle="bold" />
+<!--
+    android:background="#5CB65F"-->
 </RelativeLayout>
