--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -15,8 +15,9 @@
         android:id="@+id/emptyElement"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/empty_list"
+        android:text="@string/empty_list_item"
         android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:textSize="20sp"
         android:textStyle="bold" />
 
