--- a/app/src/main/res/layout/dialog_add_item.xml
+++ b/app/src/main/res/layout/dialog_add_item.xml
@@ -5,6 +5,7 @@ android:layout_width="wrap_content"
 android:layout_height="wrap_content">
     <TextView
         android:text="Add Item"
+        android:id="@+id/heading"
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:layout_marginTop="4dp"
