--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:paddingBottom="5dp"
-        android:text="@string/empty_list"
+        android:text="@string/empty_list_home"
         android:textSize="20dp"
         android:paddingStart="10dp"
         android:textStyle="bold" />
