--- a/app/src/main/res/layout/shopping_item_list.xml
+++ b/app/src/main/res/layout/shopping_item_list.xml
@@ -10,9 +10,20 @@ android:padding="12dp">
         android:layout_height="wrap_content"
         android:checked="false"
         android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@+id/delete_button"
+        android:layout_toLeftOf="@+id/edit_button"
         android:text="Item"
         android:textSize="30sp" />
+
+    <ImageView
+        android:id="@+id/edit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="4dp"
+        android:layout_toLeftOf="@id/delete_button"
+        android:scaleType="fitXY"
+        android:visibility="gone"
+        android:src="@drawable/baseline_edit_black_18dp"/>
+
     <ImageView
         android:id="@+id/delete_button"
         android:layout_width="wrap_content"
@@ -20,5 +31,5 @@ android:padding="12dp">
         android:paddingTop="4dp"
         android:layout_alignParentRight="true"
         android:scaleType="fitXY"
-        android:src="@drawable/ic_delete_black"/>
+        android:src="@drawable/baseline_delete_outline_black_18dp"/>
 </RelativeLayout>
