Updated the app icon to my final design. Updated drawer icon to the new app icon. Added a splash screen that is based off my new app icon. These were all changed to display a more aesthetically pleasing design. Replaced the placeholder help panel pictures to my final pictures. Changed the add item activity to a fragment. This drastically improves the speed of displaying items. Updated the app style color across the app to be the same. Added which item is in which list when adding items. This helps when managing multiple shopping lists to know which item is in which list. Updated some of the text to better reflect what they are saying.

--- a/app/src/main/res/layout/seperator_item_list.xml
+++ b/app/src/main/res/layout/seperator_item_list.xml
@@ -8,11 +8,11 @@ android:layout_height="match_parent">
         style="?android:listSeparatorTextViewStyle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="#4CAF50"
+        android:background="#6ABC6D"
         android:text="New Text"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:textStyle="bold" />
 <!--
-    android:background="#5CB65F"-->
+    android:background="#5CB65F"4CAF5C-->
 </RelativeLayout>
