--- a/app/src/main/res/layout/dialog_add_shop_list.xml
+++ b/app/src/main/res/layout/dialog_add_shop_list.xml
@@ -13,5 +13,5 @@ android:layout_height="wrap_content">
         android:layout_marginLeft="14dp"
         android:layout_marginRight="14dp"
         android:layout_marginBottom="4dp"
-        android:hint="Enter Shop Name Here" />
+        android:hint="Enter Shopping List Name Here" />
 </LinearLayout>
