--- a/app/src/main/res/layout/shopping_item_list.xml
+++ b/app/src/main/res/layout/shopping_item_list.xml
@@ -14,6 +14,17 @@ android:padding="12dp">
         android:text="Item"
         android:textSize="30sp" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/linkedList"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/nameLabel"
+        android:visibility="gone"
+        android:textSize="16sp">
+
+    </TextView>
+
     <ImageView
         android:id="@+id/edit_button"
         android:layout_width="wrap_content"
