--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#5CB65F</color>
-    <color name="colorPrimaryDark">#5CB65F</color>
+<!--    <color name="colorPrimary">#5CB65F</color>
+    <color name="colorPrimaryDark">#5CB65F</color>-->
+    <color name="colorPrimary">#6ABC6D</color>
+    <color name="colorPrimaryDark">#6ABC6D</color>
+    <color name="colorSplash">#6ABC6D</color>
     <color name="colorAccent">#D81B60</color>
     <item name="opaque" type="color">#cc000000</item>
 </resources>
