--- a/app/src/main/res/layout/dialog_add_item.xml
+++ b/app/src/main/res/layout/dialog_add_item.xml
@@ -27,12 +27,13 @@ android:layout_height="wrap_content">
         android:textSize="24dp"/>
     <EditText
         android:id="@+id/itemNameEdit"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textAutoComplete"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
+        android:layout_gravity="center"
         android:layout_marginBottom="4dp"
         android:hint="Enter item name Here" />
 <!--    <Spinner
@@ -45,12 +46,14 @@ android:layout_height="wrap_content">
         android:layout_marginBottom="4dp"/>-->
     <EditText
         android:id="@+id/itemQty"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="number"
+        android:maxLength="2"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
+        android:layout_gravity="center"
         android:hint="Enter item quantity Here" />
 </LinearLayout>
